test/errors/type/collections/set/__bor3.yasl
echo mt.lookup(collections.set(), .__bor)(1, true)
